--- a/conf/ci_ynh-huey.service
+++ b/conf/ci_ynh-huey.service
@@ -1,13 +1,13 @@
 [Unit]
 Description=ci_ynh Huey worker
-After=redis.service postgresql.service ci.service
+After=redis.service postgresql.service ci_ynh.service
 
 [Service]
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
 
-ExecStart=__FINALPATH__/venv/bin/TODO run_huey --worker-type process --workers 2
+ExecStart=__FINALPATH__/venv/bin/python3 __FINALPATH__/manage.py run_huey --worker-type process --workers 2
 
 StandardOutput=syslog
 StandardError=syslog
